src/test/ui/issues/issue-59488.stderr
error[E0369]: binary operation `>` cannot be applied to type `fn() -> i32 {foo}`
  --> $DIR/issue-59488.rs:6:9
   |
LL |     foo > 12;
   |     --- ^ -- {integer}
   |     |
   |     fn() -> i32 {foo}
   |     did you forget `()`?
   |
   = note: an implementation of `std::cmp::PartialOrd` might be missing for `fn() -> i32 {foo}`

error[E0308]: mismatched types
  --> $DIR/issue-59488.rs:6:11
   |
LL |     foo > 12;
   |           ^^ expected fn item, found integer
   |
   = note: expected type `fn() -> i32 {foo}`
              found type `{integer}`

error: aborting due to 2 previous errors

Some errors occurred: E0308, E0369.
For more information about an error, try `rustc --explain E0308`.
